--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@
   text-align: center;
   font-family: 'Noto Nastaliq Urdu', serif;
   border-top: 4px solid red;
+  user-select: none;
 }
 
 .logo .urdu {
@@ -19,6 +20,7 @@
   justify-content: space-evenly;
   flex-direction: row-reverse;
   margin-bottom: 5px;
+  user-select: none;
 }
 
 .top-menu a {
@@ -49,6 +51,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  user-select: none;
 }
 
 .pagination a {
@@ -63,4 +66,8 @@
   font-size: 14px;
   height: 20px;
   width: 20px;
+}
+
+a {
+  user-select: none;
 }
