--- a/src/Components/Newspapers/Main/Grid.css
+++ b/src/Components/Newspapers/Main/Grid.css
@@ -49,3 +49,9 @@
     border-bottom: 4px solid red;
 
 }
+
+.date {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
