--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Nastaliq+Urdu&display=swap');
 
 
+
 .logo {
   font-size: 30px;
   text-align: center;
@@ -12,60 +13,38 @@
 .logo .urdu {
   color: red;
 }
+.top-menu a {
+  color: white;
+  font-family: 'Noto Nastaliq Urdu', serif;
+  text-decoration: none;
+  display: inline-block;
+  margin-left: 3px;
+  padding: 2px 8px 2px 8px;
+  font-size: 14px;
+  -webkit-tap-highlight-color: transparent;
+}
 
 .top-menu {
-  font-family: 'Noto Nastaliq Urdu';
-  display:flex;
-  align-items: center;
-  justify-content: space-evenly;
-  flex-direction: row-reverse;
-  margin-bottom: 5px;
-  user-select: none;
-}
-
-.top-menu a {
-  text-decoration: none;
-  color: #0f0f0f;
-  padding-bottom: 2px;
-  width: 120px;
-  text-align: center;
-  border: none;
-  border-radius: 20px;
-}
-
-
-.top-menu .active {
   background-color: #0f0f0f;
   color: white;
-
-}
-
-.pagination .active {
-  background-color: rgb(206, 206, 206);
-  height: 22px;
-  width: 22px;
-}
-
-.pagination {
-  width: 100%;
+  border-bottom: 2px solid red;
   display: flex;
-  justify-content: center;
+  flex-direction: row-reverse;
   align-items: center;
-  user-select: none;
+  justify-content: space-evenly;
+  position: sticky;
+  top: 0px
 }
 
-.pagination a {
-  color: black;
-  background-color: rgb(230, 230, 230);
-  border: none;
-  border-radius: 50%;
-  margin: 0px 5px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+.top-menu .active {
+  background-color: white;
+  color: #0f0f0f !important;
+  font-weight: bold;
+  border: 3px solid transparent;
+  border-top: 3px solid #0f0f0f;
+  border-bottom: 3px solid #0f0f0f;
+  border-radius: 15px;
   font-size: 14px;
-  height: 20px;
-  width: 20px;
 }
 
 a {
