--- a/src/Components/Newspapers/Grid.css
+++ b/src/Components/Newspapers/Grid.css
@@ -58,13 +58,9 @@
     padding: 5px 20px 5px 10px;
 }
 
-
 .date input {
     font-weight: bold;
 }
-
-
-
 
 @media only screen and (max-device-width: 480px) {
     .date {
@@ -72,6 +68,8 @@
         justify-content: space-between;
         margin: 5px 2px;
         font-size: 14px;
+        align-items: center;
+        padding-left: 10px;
     }
 }
 
