--- a/src/Components/Newspapers/Grid.css
+++ b/src/Components/Newspapers/Grid.css
@@ -89,7 +89,7 @@
 input, input:focus, input:active {
     outline-color: transparent;
     border-color: transparent;
-
+} 
 @media only screen and (max-device-width: 600px) {
 
     .date p {
