--- a/src/Components/Newspapers/Style.css
+++ b/src/Components/Newspapers/Style.css
@@ -15,8 +15,8 @@
 .grid a {
     text-decoration: none;
     font-size: 16px;
-    background-color: #0f0f0f;
-    color: white;
+    background-color: #ffffff;
+    color: #0f0f0f;
     border: 2px solid #0f0f0f;
     border-radius: 50px;
     transition: all .25s;
